# libftdi

./: .gitignore  AUTHORS  CMakeLists.txt  CMakeOptions.txt  ChangeLog  LibFTDI1Config.cmake.in  LibFTDIConfig.cmake.in  README  README.mingw  TODO  libftdi.pc.in  libftdi.spec.in  libftdi1-config.in  libftdi1.pc.in  libftdi1.spec.in
bindings/: CMakeLists.txt  doxy2swig.py  ftdi.i  ftdi1.i
cmake/: FindLibUSB1.cmake  FindUSB1.cmake  LibFTDI1Config.cmake.in
doc/: Doxyfile.in  release-checklist.txt
examples/: CMakeLists.txt  async.c  bitbang.c  bitbang2.c  bitbang_ft2232.c  serial_test.c
examples/cmake_example/: CMakeLists.txt
examples/python/: complete.py  simple.py
ftdi_eeprom/: CMakeLists.txt  main.c
ftdipp/: CMakeLists.txt  ftdi.cpp  ftdi.hpp
python/: CMakeLists.txt  ftdi1.i
python/examples/: CMakeLists.txt  cbus.py  complete.py
src/: CMakeLists.txt  ftdi.c  ftdi.h  ftdi_i.h  ftdi_stream.c
test/: CMakeLists.txt
